--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "rc-slider": "^9.5.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4",
     "styled-components": "^5.2.0"
   },
