--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.21.0",
+    "prop-types": "^15.7.2",
     "rc-slider": "^9.5.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
